name:                toot
version:             0.1.0.0
license-file:        LICENSE
author:              Jonathan Daugherty <cygnus@foobox.com>
maintainer:          Jonathan Daugherty <cygnus@foobox.com>
build-type:          Simple
cabal-version:       >=1.10

executable toot
  main-is:           Toot.hs
  hs-source-dirs:    src
  other-modules:     Twitter
  ghc-options:       -threaded -Wall -fno-warn-unused-do-bind
  default-language:  Haskell2010
  build-depends:     base >=4.6 && <4.7,
                     transformers,
                     monad-logger,
                     text,
                     text-icu,
                     bytestring,
                     conduit,
                     http-conduit,
                     http-types,
                     authenticate-oauth,
                     twitter-conduit,
                     twitter-types,
                     lens,
                     ini,
                     unordered-containers,
                     vty,
                     vty-ui >= 1.7,
                     vty-ui-extras >= 0.3
