name:                toot
version:             0.1.0.0
license-file:        LICENSE
author:              Jonathan Daugherty <cygnus@foobox.com>
maintainer:          Jonathan Daugherty <cygnus@foobox.com>
build-type:          Simple
cabal-version:       >=1.10

executable toot
  main-is:           Toot.hs
  hs-source-dirs:    src
  other-modules:     Twitter
  extra-lib-dirs:    /usr/local/opt/icu4c/lib
  include-dirs:      /usr/local/opt/icu4c/include
  ghc-options:       -threaded -Wall -fno-warn-unused-do-bind
  default-language:  Haskell2010
  build-depends:     base,
                     transformers,
                     monad-logger,
                     data-default,
                     text,
                     text-icu,
                     bytestring,
                     conduit,
                     http-conduit,
                     http-types,
                     authenticate-oauth,
                     twitter-conduit >= 0.1.0,
                     twitter-types >= 0.7,
                     aeson,
                     twitter-types-lens,
                     lens,
                     ini,
                     unordered-containers,
                     vty,
                     brick
